# photo-retouch-agent

./: .env.example  .gitignore  README.md  app.js  index.html  pyproject.toml  styles.css
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  model_selection.py
backend/app/api/middleware/: auth.py  rate_limit.py
backend/app/api/routes/: analyze.py  health.py  photos.py  retouch.py
backend/app/brains/: __init__.py  base.py  factory.py  local.py  openai_compatible.py
backend/app/core/: config.py  database.py  errors.py  logging.py
backend/app/domains/: __init__.py  base.py  registry.py
backend/app/domains/general/: __init__.py  analyzer.py  planner.py
backend/app/domains/portrait/: __init__.py  analyzer.py  planner.py
backend/app/providers/: __init__.py  base.py  factory.py  mock_image_provider.py  qwen_image_provider.py  seedream_image_provider.py
backend/app/schemas/: analysis.py  job.py  photo.py  retouch.py
backend/app/services/: job_store.py  retouch_service.py  storage.py  task_queue.py
backend/tests/: conftest.py  test_analysis.py  test_frontend_static.py  test_health.py  test_prompt_brain.py  test_provider_api.py  test_qwen_provider.py  test_refine_job.py  test_retouch_job.py  test_seedream_provider.py  test_upload.py
docs/: architecture-v0.3.0.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: ai-retouch.mjs  api.js  app.js  export-image.mjs  local-retouch.mjs  main.js  state.js
frontend/tests/: ai-retouch.test.mjs  export-image.test.mjs  local-retouch.test.mjs
