[project]
name = "photo-retouch-agent-backend"
version = "0.1.0"
description = "Backend service for the Photo Retouch Agent MVP."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pillow>=10,<13",
  "python-dotenv>=1,<2",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
